<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		style="@style/widthMatchHeightWrap"
		android:orientation="vertical"
		android:padding="@dimen/content_margin">

		<com.google.android.material.card.MaterialCardView style="@style/card">
			<LinearLayout
				style="@style/cardchild"
				android:orientation="vertical">

				<TextView
					style="@style/heading"
					android:text="@string/onboarding_keyboard_heading" />

				<TextView
					style="@style/body_text"
					android:text="@string/onboarding_keyboard_text" />

				<Button
					android:id="@+id/onboardingEnableKeyboardBtn"
					style="@style/button"
					android:text="@string/enable_keyboard_button"
					app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
	</LinearLayout>
</androidx.core.widget.NestedScrollView>
